--- a/LifeScheduler.Frontend/wwwroot/index.html
+++ b/LifeScheduler.Frontend/wwwroot/index.html
@@ -9,12 +9,12 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="LifeScheduler.Frontend.styles.css" rel="stylesheet" />
-
+    
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">Loading...dsasd</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
@@ -23,6 +23,8 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <script src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+    <script src="scripts/vis.js"></script>
 </body>
 
 </html>
